-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11.0.9, 15, 16
-
Component/s: hotspot
-
b31
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248811 | 16 | Roman Kennke | P2 | Resolved | Fixed | b05 |
| JDK-8250136 | 15.0.2 | Roman Kennke | P2 | Resolved | Fixed | b01 |
| JDK-8250435 | 15.0.1 | Roman Kennke | P2 | Resolved | Fixed | b03 |
We see occasional crashes during CI testing:
# Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/cpu/x86/frame_x86.cpp:684), pid=25982, tid=26009
# assert(_last_Java_pc == NULL) failed: already walkable
Stack: [0x00007f5d0e9e6000,0x00007f5d0eae6000], sp=0x00007f5d0eae1820, free space=1006k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa1b474] frame::sender_for_entry_frame(RegisterMap*) const+0x194
V [libjvm.so+0xa1c2f8] frame::sender(RegisterMap*) const+0x228
V [libjvm.so+0x16856ac] JavaThread::oops_do(OopClosure*, CodeBlobClosure*)+0x3ac
V [libjvm.so+0x1690683] Threads::possibly_parallel_oops_do(bool, OopClosure*, CodeBlobClosure*)+0x133
V [libjvm.so+0x1514f6d] ShenandoahRootVerifier::roots_do(OopClosure*)+0x23d
V [libjvm.so+0x1540052] ShenandoahVerifierReachableTask::work(unsigned int)+0x242
V [libjvm.so+0x17b9f74] GangWorker::run_task(WorkData)+0x84
V [libjvm.so+0x17ba0b8] GangWorker::loop()+0x48
V [libjvm.so+0x1691cb6] Thread::call_run()+0xf6
V [libjvm.so+0x12bce56] thread_native_entry(Thread*)+0x116
# Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/cpu/x86/frame_x86.cpp:684), pid=25982, tid=26009
# assert(_last_Java_pc == NULL) failed: already walkable
Stack: [0x00007f5d0e9e6000,0x00007f5d0eae6000], sp=0x00007f5d0eae1820, free space=1006k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa1b474] frame::sender_for_entry_frame(RegisterMap*) const+0x194
V [libjvm.so+0xa1c2f8] frame::sender(RegisterMap*) const+0x228
V [libjvm.so+0x16856ac] JavaThread::oops_do(OopClosure*, CodeBlobClosure*)+0x3ac
V [libjvm.so+0x1690683] Threads::possibly_parallel_oops_do(bool, OopClosure*, CodeBlobClosure*)+0x133
V [libjvm.so+0x1514f6d] ShenandoahRootVerifier::roots_do(OopClosure*)+0x23d
V [libjvm.so+0x1540052] ShenandoahVerifierReachableTask::work(unsigned int)+0x242
V [libjvm.so+0x17b9f74] GangWorker::run_task(WorkData)+0x84
V [libjvm.so+0x17ba0b8] GangWorker::loop()+0x48
V [libjvm.so+0x1691cb6] Thread::call_run()+0xf6
V [libjvm.so+0x12bce56] thread_native_entry(Thread*)+0x116
- backported by
-
JDK-8248811 Shenandoah: Claim verifier thread roots for parallel processing
-
- Resolved
-
-
JDK-8250136 Shenandoah: Claim verifier thread roots for parallel processing
-
- Resolved
-
-
JDK-8250435 Shenandoah: Claim verifier thread roots for parallel processing
-
- Resolved
-
- duplicates
-
JDK-8248674 Shenandoah: assert(_last_Java_pc == NULL) failed: already walkable when running with verifier
-
- Closed
-
- relates to
-
JDK-8248799 Shenandoah: Claim threads token in constructor of ShenandoahRootVerifier
-
- Resolved
-