8248725: Shenandoah: Claim verifier thread roots for parallel processing

Reviewed-by: shade